# "dox/ChangeLog"
#	$Id: ChangeLog,v 1.34 2008/10/30 02:15:07 fang Exp $

2008-10-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-48:
	  prsim documentation on hierarchical co-simulation and
		basic VPI function calls to vpihacprsim.so.


2008-03-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-09-merged-parser-06-07:
	  Branch merge.


2008-03-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-05-parser-06-07:
	  mk/Make.* templates: use POSIX method of formatted printing, 
		printf over echo -n (which doesn't always work).


2008-02-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-08:
	  prsim/commands.texi: new section on channel commands.


2008-01-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-19:
	  prsim/commands.texi: include cmd/weak-rules.texi (generated)


2007-10-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-83:
	  Minor install fix in Make.dox-tail (install-html)


	* HACKT-00-01-04-main-00-81-82:
	  Added directory entries for .texi (info) files.  


2007-09-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74:
	  Removed most obsolete latex sources, superceded by texinfo sources.
	  Texinfo dvi and pdf cannot be built in parallel because 
		auxiliary file collide.


2007-08-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-65:
	  chpsim:/stdchpfn.texi: documented bit-manip functions.


2007-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-61-chpsim-08-03:
	  chpsim:/ Updated standard function library documentation.
		Updated types and macro documentation. 
	  mk/scantexdepend.awk: exclude more shell patterns from search


2007-08-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-61: