@@ -8,16 +8,22 @@
 @c %**end of header
 
 @c "chpsim.texi"
-@c $Id: hacchpsim.texi,v 1.4 2007/10/08 19:09:36 fang Exp $
+@c $Id: hacchpsim.texi,v 1.5 2008/11/28 22:07:02 fang Exp $
 
 @dircategory Hierarchical Asynchronous Circuit Kompiler Toolkit (HACKT)
 @direntry
 * HAC CHPSIM: (hacchpsim).    HAC CHP Simulator.
 @end direntry
 
+@include hacmacros.texi
+
 @copying
 This manual describes the usage and operation of HACKT's @command{chpsim} 
 simulator.  
+
+This document can also be found online at @homepagesubref{hacchpsim}.
+
+The main project home page is @homepageref{}.
 
 Copyright @copyright{} 2007 Cornell University
 
