@@ -8,16 +8,22 @@
 @c %**end of header
 
 @c "chpsim.texi"
-@c $Id: hackt.texi,v 1.2 2007/10/08 19:09:36 fang Exp $
+@c $Id: hackt.texi,v 1.3 2008/11/28 22:07:07 fang Exp $
 
 @dircategory Hierarchical Asynchronous Circuit Kompiler Toolkit (HACKT)
 @direntry
 * HACKT core programs: (hackt).    HACKT compiler tools tutorial.
 @end direntry
 
+@include hacmacros.texi
 
 @copying
 This manual describes the usage and operation of HACKT's tools.  
+
+This document can also be found online at @homepagesubref{hackt}.
+
+The main project home page is @homepageref{}.
+
 
 Copyright @copyright{} 2007 Cornell University
 
@@ -56,8 +62,6 @@ Permission is hereby granted to ...
 @top HACKT Tools
 @insertcopying
 @end ifnottex
-
-@include hacmacros.texi
 
 @c @copying is recommended here as well
 @menu
