@@ -1,5 +1,12 @@
 # "dox/ChangeLog"
-#	$Id: ChangeLog,v 1.34 2008/10/30 02:15:07 fang Exp $
+#	$Id: ChangeLog,v 1.35 2008/11/28 22:06:59 fang Exp $
+
+2008-11-27	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-66+:
+	  Added URL links to homepage in copyright notices in 
+		texinfo documents.  
+
 
 2008-10-29	David Fang		<fangism@users.sourceforge.net>
 
